[package]
name = "keanu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uds_server"
path = "src/uds_server.rs"

[[bin]]
name = "uds_client"
path = "src/uds_client.rs"

[[bin]]
name = "tcp_server"
path = "src/tcp_server.rs"

[[bin]]
name = "tcp_client"
path = "src/tcp_client.rs"

[[bin]]
name = "http_tcp_server"
path = "src/http_tcp_server.rs"

[[bin]]
name = "http_tcp_client"
path = "src/http_tcp_client.rs"

[[bin]]
name = "http_uds_server"
path = "src/http_uds_server.rs"

[[bin]]
name = "http_uds_client"
path = "src/http_uds_client.rs"

[dependencies]
async-stream = "0.3.3"
futures-util = "0.3.24"
hyper = { version = "0.14.20", features = ["client", "http1", "http2", "tcp", "server", "stream"]}
hyper-unix-connector = "0.2.2"
tokio = { version = "1.21.0", features = ["macros", "rt"]}
